# XRayMonteCarlo

./: CMakeLists.txt  README.md  TODO.txt  all_Be.sh  br.sh  main.cpp  run.sh  test.sh
bashscript_out/: be_0.txt  be_1.txt  be_10.txt  be_11.txt  be_12.txt  be_13.txt  be_14.txt  be_15.txt  be_16.txt  be_17.txt  be_18.txt  be_19.txt  be_2.txt  be_20.txt  be_21.txt  be_22.txt  be_23.txt  be_3.txt  be_5.txt  be_6.txt  be_7.txt  be_8.txt  be_9.txt
composition_out/: be_0.txt  be_1.txt  be_2.txt  be_3.txt  be_4.txt  comp_0.txt  comp_1.txt  comp_2.txt  comp_3.txt  comp_4.txt
include/: CurveFunc.h  FileParse.h  PRNG.h  Plotting.h  Support.h  xorshift.h
prng/: PRNG.cpp  xorshift.cpp
src/: main.cpp  tests.cpp
src/pipeline/: AttenuationLengths.cpp  AttenuationLengths.h  EHistogram.cpp  EHistogram.h  XRaySpectrum.cpp  XRaySpectrum.h
supportlib/: CurveFunc.cpp  FileParse.cpp  Plotting.cpp
xraydata/atten_lengths/: test.txt
xraydata/atten_lengths/Be/: b0.txt  b10.txt  b11.txt  b12.txt  b13.txt  b14.txt  b15.txt  b16.txt  b17.txt  b18.txt  b19.txt  b2.txt  b20.txt  b21.txt  b22.txt  b23.txt  b24.txt  b3.txt  b4.txt  b5.txt  b6.txt  b7.txt  b8.txt  b9.txt
xraydata/atten_lengths/Comp/: comp1.txt  comp2.txt  comp3.txt  comp4.txt  comp5.txt
xraydata/atten_lengths/old_Be/: b1.txt  b12.txt  b14.txt  b15.txt  b21.txt  b22.txt  b23.txt  b4.txt  b6.txt  b8.txt  b9.txt
xraydata/e_spectra/: test.txt  test1.txt
